# SquareTap

./: .README  .gitignore  Cargo.toml  README.md  settings.toml
src/: game.rs  main.rs
src/game/: highscore.rs  pattern.rs  saves.rs  settings.rs
