[package]
name = "squaretap"
version = "0.1.3"
authors = ["Kim Lindblå <kim.lindbla@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.4"
rand = "0.8.3"
savefile="0.7"
savefile-derive="0.7"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"